Add some useful sample data into a new PipelineDefinition